fix z-index home page

--- a/style.css
+++ b/style.css
@@ -31,7 +31,7 @@ body {
   width: 100%;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 2;
   background-color: white;
   border: 27px solid white;
 }
@@ -115,7 +115,7 @@ nav {
   flex-wrap: nowrap;
   flex-direction: row;
   top: 0;
-  z-index: 2;
+  z-index: 3;
 }
 
 .nav-menu {
@@ -318,7 +318,7 @@ nav {
   padding: 8px 12px;
   position: absolute;
   top: 0;
-  z-index: 2;
+  z-index: 1;
 }
 
 /* The dots/bullets/indicators */
